# ChangeLog for x11-misc/lightdm-gtk-greeter
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.18 2013/12/11 21:43:00 pacho Exp $

  11 Dec 2013; Pacho Ramos <pacho@gentoo.org> lightdm-gtk-greeter-1.6.1.ebuild:
  amd64/x86 stable, bug #492796

*lightdm-gtk-greeter-1.6.1 (11 Oct 2013)

  11 Oct 2013; Markos Chandras <hwoarang@gentoo.org>
  +lightdm-gtk-greeter-1.6.1.ebuild, -lightdm-gtk-greeter-1.1.4-r1.ebuild,
  -lightdm-gtk-greeter-1.1.5.ebuild, -lightdm-gtk-greeter-1.3.1.ebuild:
  Version bump

*lightdm-gtk-greeter-1.6.0 (16 Aug 2013)

  16 Aug 2013; Markos Chandras <hwoarang@gentoo.org>
  +lightdm-gtk-greeter-1.6.0.ebuild:
  Version bump

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org>
  lightdm-gtk-greeter-1.3.1-r1.ebuild:
  Move Creative Commons licenses to shorter names.

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  lightdm-gtk-greeter-1.3.1-r1.ebuild:
  Add ~ppc, wrt bug #454326

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  lightdm-gtk-greeter-1.3.1-r1.ebuild:
  Stable for arm, wrt bug #452950

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  lightdm-gtk-greeter-1.3.1-r1.ebuild:
  Stable for x86, wrt bug #452950

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  lightdm-gtk-greeter-1.3.1-r1.ebuild:
  Stable for amd64, wrt bug #452950

*lightdm-gtk-greeter-1.3.1-r1 (04 Oct 2012)
  04 Oct 2012; Markos Chandras <hwoarang@gentoo.org>:
  +lightdm-gtk-greeter-1.3.1-r1
  Add new background for lightdm-gtk-greeter. Thanks to Markellos Orfanos
  <m4rk@silverarrow.org>

*lightdm-gtk-greeter-1.3.1 (11 Sep 2012)

  11 Sep 2012; Markos Chandras <hwoarang@gentoo.org>
  +lightdm-gtk-greeter-1.3.1.ebuild:
  Version bump

*lightdm-gtk-greeter-1.1.6 (19 Jul 2012)

  19 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  +lightdm-gtk-greeter-1.1.6.ebuild:
  Version bump

  27 Jun 2012; Steev Klimaszewski <steev@gentoo.org>
  lightdm-gtk-greeter-1.1.5.ebuild: