@@ -1,12 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=x11-libs/gtk+:3 >=x11-misc/lightdm-1.2.2
-DESCRIPTION=LightDM GTK+ Greeter
-EAPI=4
-HOMEPAGE=http://launchpad.net/lightdm-gtk-greeter
-IUSE=branding
-KEYWORDS=~amd64 ~arm ~x86
-LICENSE=GPL-3 LGPL-3
-RDEPEND=!!<x11-misc/lightdm-1.1.1 x11-libs/gtk+:3 >=x11-misc/lightdm-1.2.2 x11-themes/gnome-themes-standard x11-themes/gnome-icon-theme
-SLOT=0
-SRC_URI=http://launchpad.net/lightdm-gtk-greeter/trunk/1.1.6/+download/lightdm-gtk-greeter-1.1.6.tar.gz branding? ( http://dev.gentoo.org/~hwoarang/distfiles/lightdm-gentoo-patch.tar.gz )
-_md5_=032bcb69b08a0b503f474bbdbc238445
