@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~arm ~ppc ~x86
 LICENSE=GPL-3 LGPL-3 branding? ( CC-BY-3.0 )
 RDEPEND=!!<x11-misc/lightdm-1.1.1 x11-libs/gtk+:3 >=x11-misc/lightdm-1.2.2 x11-themes/gnome-themes-standard x11-themes/gnome-icon-theme
 SLOT=0
-SRC_URI=http://launchpad.net/lightdm-gtk-greeter/1.6/1.6.0/+download/lightdm-gtk-greeter-1.6.0.tar.gz branding? ( http://dev.gentoo.org/~hwoarang/distfiles/lightdm-gentoo-patch-2.tar.gz )
+SRC_URI=http://launchpad.net/lightdm-gtk-greeter/1.7/1.7.0/+download/lightdm-gtk-greeter-1.7.0.tar.gz branding? ( http://dev.gentoo.org/~hwoarang/distfiles/lightdm-gentoo-patch-2.tar.gz )
 _eclasses_=eutils	d04e3933e3ec7e338a0561a6b0ae66b1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=1bfc705f695b0b51cb64c417c7a4cedd
+_md5_=d776545ea445101e694bed9b9b52a6c3
