@@ -2,21 +2,30 @@
 Hash: SHA256
 
 DIST lightdm-gentoo-patch-2.tar.gz 695543 SHA256 5733622609afa67c82e8b6bc4915d6fbbf8470604afe87c4334d418eb5834fa0 SHA512 8d9bfdee71ab1871de33e134b11bba409cc493876e5ae9534956100ff6af6c8748b29de9082ecf8b771ccac4c8c2024e15e93332165171dfe93eb99c9a834274 WHIRLPOOL cb5137a361f32c122fc7d7013f53e890c0ec1823bb78c61fbbeb03803363a2f94cfd61fba096036930d5c561452ab86bab85a9003b1afe521f8b77301c933338
-DIST lightdm-gentoo-patch.tar.gz 101983 SHA256 2e56d0ef3926428cea7870fbade77b20bd05a7664ae301aacc56504e07cf39ba SHA512 1c809fdf93969122c69ae19e934c95c1228f04546cefdb9ceeb24898a000673c4bcdb6c942c63fdb36a88a3a48192a730826db8ae9c595788be24e4cb0831590 WHIRLPOOL 9f41b035a00ea7fdeda79afcfd20487ca1524b63653874b4b74bc06e8b5d0a3dde09c225d30d5b8a79d329bd797d89b4dfe73540c3ea1de2f33e72f24f88b69f
-DIST lightdm-gtk-greeter-1.1.6.tar.gz 379948 SHA256 d1963b6b2ce612d8ae32b0aee77d3e02994e5a9e60cc05b6bde7105cd5c54f0d SHA512 3bc32d6b0a6810be7a4ae03d2affe6a9f8f128550b17f315beb3ee64cc8eaf4900f7edb412645ac728160fa8f5ac0d61b5638cb1c15aa06c27e79663d40ce778 WHIRLPOOL ee5c0f7988f1811ca00d8500a5281b79b881e794a1252c19cba4c110c3b02c515295f18641270bf6327bcee3ccce1d892b361eb0e8a3cde6a6d498835057a30c
 DIST lightdm-gtk-greeter-1.3.1.tar.gz 374479 SHA256 a384b6413a52e6c6aeaf3242b2420e857ad7e2e4e5bec47da663e67076c0ee87 SHA512 3a597fcf3dff930c5ed9cc13675c0af6f385987718527a4a2598a92d2c114df5752d8ab7867d027b4c5de71fa76f0127b57b4d73400a096e530835bf9e2e945a WHIRLPOOL 7e78fd138c528e258eb1718ddf2479ebc657887a41c605a001dc14a20965c99d45d7500b5e5194ca364069ead762fb029ea6e2ce03be4cc786ef568b4deef7e5
-DIST lightdm-gtk-greeter-1.6.0.tar.gz 383312 SHA256 4e03650e4cd84354b2ae720831d412e31694956b115d1674bed95ec0fe89dd94 SHA512 3cfbee5a8050f7187dec895998014f8dac19a4f51ab757815667ba2c45afb543dd74f9b0984aa6ccd4d032f250b7ddc48ba70f89fe547ecedcdacc3bbb7b13bf WHIRLPOOL a7d25297532e2c56dfd44e1a1174361d907c28c6e00ef5551ff5b707fda2b142507a14d70c240ce0eb0fb4f2ae219a802541393fba1aeecf212c6ac7d9e5fcc9
 DIST lightdm-gtk-greeter-1.6.1.tar.gz 391175 SHA256 1f0286ab093d50151f0efc46496aef3f8ed8c7306bbc81807a3fdcbcb2a468d9 SHA512 5137deb631b669db58731a6449ba8f8709666fb7b6affac56038355aafec73041e81a9a822035de7bed0d7164d124df50387a708addde4cf094fe0a977ea154a WHIRLPOOL 9eb4cec7f04d21c3c912f8bf42ae2110ce126006a15c860b21fd66fb41bcb0a517895eba6f017587576fb03be17601614ca3798147923a1690573a1d5e35e813
-EBUILD lightdm-gtk-greeter-1.1.6.ebuild 1399 SHA256 2c37c8fe073d5d3da28eeb4dba29eaf4cef2ff0fd0086c4a7a7e950fc6986f2e SHA512 bb248c08f36400efce5f46670b81570bc2d2dc883b9967a8c17b1afce9395765fcb6cf0922ae9a53635a88321183bc6eca42cf4252aea6455e9417978cc70a46 WHIRLPOOL 0762eb3d1c562cbfd4e2ecdb015e0e85599ed617671a4be1a241c474711f68a169546ddee58e849d335c68ac59b36b5a8941001fe8b1b6564519b6484fee8edb
+DIST lightdm-gtk-greeter-1.7.0.tar.gz 398438 SHA256 3f1086091ed2d892eadcd1550e2e7e1b255814735297fbb7068cd95ac7e8044d SHA512 c6ed54f4e291255b3c8802d517f9d0749be368a762e69c1d9c40254f240d32b6858f9169423ef18f0f1cae38c9851f0af58584d8a0d85f03a9e97a5ca0b302ee WHIRLPOOL 1191cc5bfea4aa1a7eeb2daecd215c90dd1a6399c33e0014e1e1f5449b0ed04862cce8f62c3a078430056da647a34d2eb24fb227349d41e988d10b1498968de2
 EBUILD lightdm-gtk-greeter-1.3.1-r1.ebuild 1509 SHA256 64919e1576d27b0b91e441e0456a025f4942ad03cd9f4bc061c6876aa437fdf9 SHA512 90fc578ac81a710e5dd695ad2a5c865036f7e5ae3755282c2fd0159caeac88e53b5fdfcc05b9c0378a0d71694b71a6e82c950d4623ea40ca071bdff05f614b88 WHIRLPOOL 7f9a2f14d8654fb7b0b3d728c85a196da2d7629a65e75ebcdefe0feef9ee30fe123e16a3e8f6fff64b19d5e5a63e9e857004d9e323b381049b8c08b56910b5c0
-EBUILD lightdm-gtk-greeter-1.6.0.ebuild 1566 SHA256 ad337964808f689e373127bc91fcbf4153c2d861349feb39e4c87fea47b73101 SHA512 73950b26491e3a7264878ccf22b13e2ca5735a9e43c8d8d703d64787c5dee853ca346e16d0024e92e70f3d3dddb80bacd95691713ad151e2bb46c1c79d7ed108 WHIRLPOOL a1615b7c9735c66adfbc07fd9388e666f650ad6e0c90387210d2d03178f62853c9b7ef26cdb3e9c0a710a2254550672bc0d3f659fba260060f68ecdcecda89e4
 EBUILD lightdm-gtk-greeter-1.6.1.ebuild 1561 SHA256 01bd75176f45f4e1b421b6f2847191f8305781e76c3ea78809c5288ef147a212 SHA512 c08bfe4f0c60994bc4ef987c96bd750f4b83b4ed6ccddc56079b094ddd8bb2535711854573ca3fd17d45d3b722bfafcd8d2c7f3246bf6cdb65f8bb2aa1979ec4 WHIRLPOOL 2ca1cb545f9bd3e0e687621d69ffe5b7f0b97f163aca7ec66bf91832b2671cfcd5ef63e4c45bd2aaeb9353cf7535bbd024ffc1a12c250f1a3ee42a5edf4518ae
-MISC ChangeLog 3165 SHA256 ddd76f18beb2c44ff7fb743501eec6670a392a11350516d666fd6172fa1cb6d5 SHA512 1e5354510d6fcd5cf45c5d7c62625bec247ccd68866be44d0e8ee093b69613b8d8dc6d1dc1eaa27489dcc43b6e54b2e39ec3abc13b0a9bb537d946e4c6b51476 WHIRLPOOL 0d871f192aae885d65786fd0e80c8b1d6b24dfc1a2c9d0e3643e1f328ee5eb2cf41a2af55f734573614a8b2108621b98726eb98e6ef121bbe0863bb91dadd4d5
+EBUILD lightdm-gtk-greeter-1.7.0.ebuild 1566 SHA256 e0f0f1ac50eec95b517d0a1bae63e9bbd25d77e31bb73576aa66a8fe60066df3 SHA512 ccfac42a3aa56bf64d4873d2b91e8c28e85cf790d004508ded066123d9fb97c01da4647627d56b9ec9651f6ed80dcfb9b99a532c970354994649f2c2cce102c6 WHIRLPOOL 3a28e192a4186850ee8f793d9c6c12f93cd82807abe80daf20d8cb4eb71e87022d26d626e227994b1491555fc000b966ff8128e68d62122920b15b1cdaac8a4d
+MISC ChangeLog 3416 SHA256 525a36b4b0a8cc4a009770ffd8d315ea3c4fc48fd21e14a6a333b364cd9f4b51 SHA512 9bc742a68fd958ea62c6ece9c453ef2a3a0aede7e4a007560dc5ea97af0a523ab45d94d17393d1c6f79fba2dae7eed1d1e1072b47942512aa69d594f2e6e0faa WHIRLPOOL 182cc8c38bf29d4ab3fc57dd2003bbd4f6f40579eea22e52f0f32a165d4aefc37d8d0981dbddb705201c49983d614666fe71ac78f2c0671811eaabb41fa41e7e
 MISC metadata.xml 278 SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160 SHA512 c47ad7b85f6516eec5bc86f26785d8731544436f25fce07093a7c51de184ddfeca02253022c54fb88c1b75645350d8d23de7fc1d8c62e8050e1288b4d6ebaba6 WHIRLPOOL 5fc748443c6e622808acfb4f906cc41bac88b04718771a678462d1079185b74de2840d3dfe1c0949ad96c5b8d2a278f7587af8b1381cddf72c92b9b3099b40c8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKo3GUACgkQCaWpQKGI+9RiFgCcDlW/IPg2xS4QwFFS0A2A51D6
-O/YAnRyMRDuXAlnCtDsK3MtnQ1qnhPJ7
-=AMxn
+iQJ8BAEBCABmBQJSx0ZqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88YgcQAJeRBcJH4Jo/kGvu8JL/PAxr
+XVnBIvJqXQQBaOrJwneVCRuM7fWsgduhrnDrcoYX0FC2RJ1/1ir/xGwE6Z3BcHBL
+9jXE5rUncg9/EwRlfSu/NLByvs5sWLocyiE+O3dS+Rzq6fA93WsNfOgQe2nbtjmW
+GDECIuVfodtP6lNR4azU62+GvobnPAuIMOyj9tSHre1hBh6uySnwLzjt1KMbPJhh
+Dkwy2nejwnBPfOa2ulI57LG1puk7jLseHh9iHVAPyw6jW6OWbT6x5F9QOCrQCXNC
+TkWXV9aZTxHuzqjXbwaIKlJ0Nkj1mgNrHA+i0R9ABHfDbYCEF/tI5dTs0llEiGq7
+iCg46VuQcr+0MiY7fiqEXux5u8kHj3mf5n0WyOApsb1mF90fNhMwKeJzzcxPJaph
+f2v502P0IEGi7pnCQrlvQiMbAqjXEzSDBMFyD9xWCwZ5XqG53Z0Ghg6olt09Q6f9
+WmagVq84DiIj1ARIkHHmqLWjc/QdO5Ez4r0eS+BPC4HV9YxbPROwtAr8b54jvGDM
+pVv0Frg1uVdIsWatHbszF+U861ddz4kex/2vQYxmtnvdnSVsNMYmpGkHdUcJGwRr
+g96rsdfP6C9Vk5WKmDCoSfnKlJ7Ng+0VhuexcmTgYK06SGyG2t1QfTwf/99REs5M
+r+qmsE5PWv3/z5dZ9lUv
+=xJa2
 -----END PGP SIGNATURE-----
